# heig_vse_25

./: .gitignore  README.md
ex01_plan_verification/: ex01_Spécifications.docx  ex01_uart_verif_plan.xlsx  uart_verif_plan.xlsx
ex02_tbcomb_vrm/code/: adder_testplan.xml  default.rmdb  transcript
ex02_tbcomb_vrm/code/scripts/: sim.do
ex02_tbcomb_vrm/code/sim/: transcript
ex02_tbcomb_vrm/code/src_tb/: adder_tb.sv
ex02_tbcomb_vrm/code/src_vhdl/: adder.vhd
ex03_sv_random/code/scripts/: sim.do
ex03_sv_random/code/src_tb/: test_random_tb.sv
ex04_sv_assertions_comb/code/scripts/: check.do  sim.do
ex04_sv_assertions_comb/code/src/: alu.vhd
ex04_sv_assertions_comb/code/src_tb/: alu_assertions.sv  alu_tb.sv  alu_wrapper.sv
ex05_sv_assertions_avalon/code/scripts/: sim.do
ex05_sv_assertions_avalon/code/src/: avalon_generator.sv
ex05_sv_assertions_avalon/code/src_tb/: avalon_assertions_0.sv  avalon_assertions_2.sv  (+1 more)
ex06_sv_assertions_elevator/: .gitignore
ex08_unittests/: readme.md
ex08_unittests/code/: CMakeLists.txt  cardriver.cpp  floating.cpp  main.cpp  mathcomputer.cpp  myarray.cpp  simplecompute.cpp  synchro.cpp
ex09_contracts/code/: CMakeLists.txt  contract.h  main.cpp  syntaxtree.h
ex11_coverage/code/: run_cov.sh
ex12_static_analysis/code/: Doxyfile  checkcode.sh  checkcodeimplicit.sh  checkcodenames.sh  main.cpp
ex13_memory_check/code/: CMakeLists.txt  main.cpp
labo1_sv_comb/: rapport.tex  vse_rendu.sh
labo1_sv_comb/code/: default.rmdb
labo2_sv_sequential/: rapport.tex  vse_rendu.sh
labo2_sv_sequential/code/: default.rmdb
(+229 files in other folders)
